# toy-payments-engine

./: .gitignore  Cargo.toml  LICENSE  README.md  input-example.csv
src/: csv.rs  lib.rs  main.rs
tests/: cli.rs
