[package]
name = "toy-payments-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
csv = "1.1"
rust_decimal = "1.22.0"
rust_decimal_macros = "1.22"
exitcode = "1.1.2"
log = "0.4.0"
env_logger = "0.9.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
